--- a/index.html
+++ b/index.html
@@ -1,148 +1,376 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" dir="ltr">
+
 <head>
-<meta charset="UTF-8">
-<meta http-equiv="X-UA-Compatible" content="IE=edge">
-<meta name="viewport" content="width= initial-scale=1.0">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Aldrich&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0"/>
-<title> Home | OneTech</title>
-<!-- Link to CSS -->
-    <link rel="stylesheet"  href="home.css">
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Penta Haven</title>
+  <link rel="stylesheet" href="./css/style.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.carousel.css" integrity="sha512-UTNP5BXLIptsaj5WdKFrkFov94lDx+eBvbKyoe1YAfjeRPC+gT5kyZ10kOHCfNZqEui1sxmqvodNUx3KbuYI/A==" crossorigin="anonymous"
+    referrerpolicy="no-referrer" />
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.theme.default.min.css" integrity="sha512-sMXtMNL1zRzolHYKEujM2AqCLUR9F2C4/05cdbxjjLSRvMQIciEPCQZo++nk7go3BtSuK9kfa/s+a4f4i5pLkw=="
+    crossorigin="anonymous" referrerpolicy="no-referrer" />
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+  <script src="https://code.jquery.com/jquery-1.12.4.min.js" integrity="sha256-ZosEbRLbNQzLpnKIkEdrPv7lOy9C27hHQ+Xp8a4MxAQ=" crossorigin="anonymous"></script>
+  <script type="text/javascript" src="https://cdn.jsdelivr.net/jquery/latest/jquery.min.js"></script>
+  <script type="text/javascript" src="https://cdn.jsdelivr.net/momentjs/latest/moment.min.js"></script>
+  <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/daterangepicker/daterangepicker.min.js"></script>
+  <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/daterangepicker/daterangepicker.css" />
 </head>
+
 <body>
 
-<!-- Navigation Bar -->
-    <div class="topnav">
-        <header class="header">
-            <a href="login.html">
-            <img class="nav-img" src="img/logo.png">
-            </a>
-                <nav class="navbar">
-                    <ul class="nav-links">
-                        <li> <a href="index.html"> Home </a></li>
-                        <li> <a href="store.html"> Store </a></li>
-                        <li> <a href="about-us.html"> About Us </a></li>
-                        <li> <a href="contact.html"> Contact Us </a></li>
-                        <li> <a href="brands.html"> Brands </a></li>
-                    </ul>    
-                </nav>
-        </header>
-    </div>
-<!-- End -->
+<!--HEADER/NAVBAR-->
+<div class = "navbar">
+  <nav>
+    <img src="Images/logo1.png" alt="Logo"> 
+    <ul>
+      <li><a href="#">HOME</a></li>
+      <li><a href="../about/about.html">ABOUT</a></li>
+      <li><a href="../room/room.html">ROOMS</a></li>
+      <li><a href="../contact/contact.html">CONTACT</a></li>
+    </ul>
+    <a href="../log in/sign-in.html">
+    <button class= "button">Sign In</button>
+    </a>
+  </nav>
+</div>
 
-<!-- Moving Text -->
-    <div class="movingtext">
-        <marquee><p>PROMO ALERT!!!       AS WE CELEBRATE OUR 1ST ANNIVERSARY, WE ARE GIVING A 5% DISCOUNT ON SELECTED ITEMS UNTIL DECEMBER 31,2023...HURRY UP!!!!...PROMO ALERT!!!......PROMO ALERT!!!...AS WE CELEBRATE OUR 1ST ANNIVERSARY, WE ARE GIVING A 5% DISCOUNT ON SELECTED ITEMS UNTIL DECEMBER 31,2023...HURRY UP!!!!...PROMO ALERT!!!...
-            ...PROMO ALERT!!!... AS WE CELEBRATE OUR 1ST ANNIVERSARY, WE ARE GIVING A 5% DISCOUNT ON SELECTED ITEMS UNTIL DECEMBER 31,2023...HURRY UP!!!!...PROMO ALERT!!!...
-            ...PROMO ALERT!!!... AS WE CELEBRATE OUR 1ST ANNIVERSARY, WE ARE GIVING A 5% DISCOUNT ON SELECTED ITEMS UNTIL DECEMBER 31,2023...HURRY UP!!!!...PROMO ALERT!!!......PROMO ALERT!!!... AS WE CELEBRATE OUR 1ST ANNIVERSARY, WE ARE GIVING A 5% DISCOUNT ON SELECTED ITEMS UNTIL DECEMBER 31,2023...HURRY UP!!!!...PROMO ALERT!!!...
-            ...PROMO ALERT!!!... AS WE CELEBRATE OUR 1ST ANNIVERSARY, WE ARE GIVING A 5% DISCOUNT ON SELECTED ITEMS UNTIL DECEMBER 31,2023...HURRY UP!!!!...PROMO ALERT!!!......PROMO ALERT!!!... AS WE CELEBRATE OUR 1ST ANNIVERSARY, WE ARE GIVING A 5% DISCOUNT ON SELECTED ITEMS UNTIL DECEMBER 31,2023...HURRY UP!!!!...PROMO ALERT!!!...
-        </p></marquee>
-    </div>
-<!-- End -->
+  <!--ABOUT-->
+    <section class="about">
+      <div class="container flex">
+            <img src="images/about.jpg" alt="">
+      </div>
+    </section>
 
-<!-- Background -->
-    <canvas style="position: fixed; top: 0; left: 0; z-index: -1;"></canvas>
-    <script type="text/javascript" src="js/script.js"></script>
-<!-- End -->
+  <!--BOOKING-->
+    <section class="book">
+      <div class="container flexSpace">
+          <div class="text">
+              <h1><span> RESERVATION </span></h1>
+          </div>
+          <div class="form">
+              <form class="grid" id="bookingForm">
+                  <input type="text" name="dates" placeholder="Arrival - Departure Dates" readonly />
+                  <input type="number" placeholder="Adults">
+                  <input type="number" placeholder="Children">
+                  <input type="submit" value="CHECK AVAILABILITY">
+              </form>
+          </div>
+      </div>
+  </section>
 
-<!--3D box-->
-    <div class="main-box">
-        <div class="wrapper">
-            <div class="page">
-                <img src="img/img1.jpg" width="300px" height="300px" alt="">
+  <script>
+      $(document).ready(function() {
+          $('input[name="dates"]').daterangepicker({
+              opens: 'left',
+              autoUpdateInput: false
+          }, function(start, end) {
+              $('input[name="dates"]').val(start.format('MMMM D, YYYY') + ' - ' + end.format('MMMM D, YYYY'));
+          });
+
+          $('#bookingForm').on('submit', function(event) {
+              event.preventDefault();
+              const dateRange = $('input[name="dates"]').val();
+              const adults = $('input[placeholder="Adults"]').val();
+              const children = $('input[placeholder="Children"]').val();
+              alert('Selected Date Range: ' + dateRange + '\nAdults: ' + adults + '\nChildren: ' + children);
+          });
+      });
+  </script>
+
+  <!--HOME-->
+    <section class="home">
+      <div class="content">
+        <div class="owl-carousel owl-theme">
+          <div class="item">
+            <img src="images/banner-1.png" alt="">
+            <div class="text">
+              <h1>Spend Your Holiday</h1>
+              <p>Penta Haven makes discovering and booking unforgettable stays around the world easy.
+              </p>
+              <div class="flex">
+                <a href="../about/about.html">
+                <button class="primary-btn">SEE MORE</button>
+                </a>
+                <a href="../contact/contact.html">
+                <button class="secondary-btn">CONTACT US</button>
+                </a>
+              </div>
             </div>
-
-            <div class="page">
-                <img src="img/img2.jpg" width="300px" height="300px" alt="">
+          </div>
+          <div class="item">
+            <img src="images/banner-2.png" alt="">
+            <div class="text">
+              <h1>Spend Your Holiday</h1>
+              <p>Discover and book your perfect getaway effortlessly with Penta Haven.
+              </p>
+              <div class="flex">
+                <a href="../about/about.html">
+                <button class="primary-btn">READ MORE</button>
+                </a>
+                <button class="secondary-btn">CONTACT US</button>
+              </div>
             </div>
-
-            <div class="page">
-                <img src="img/img3.jpg" width="300px" height="300px" alt="">
+          </div>
+          <div class="item">
+            <img src="images/banner-3.png" alt="">
+            <div class="text">
+              <h1>Spend Your Holiday</h1>
+              <p>Penta Haven simplifies finding and booking your ideal stay anywhere in the world.
+              </p>
+              <div class="flex">
+                <button class="primary-btn">READ MORE</button>
+                <button class="secondary-btn">CONTACT US</button>
+              </div>
             </div>
-
-            <div class="page">
-                <img src="img/img4.jpg" width="300px" height="300px" alt="">
-            </div>
-
-            <div class="page">
-                <img src="img/img5.jpg" width="300px" height="300px" alt="">
-            </div>
-
-            <div class="page">
-                <img src="img/img6.jpg" width="300px" height="300px" alt="">
-            </div>
+          </div>
         </div>
-    </div>
-<!-- End -->
+      </div>
+    </section>
 
-<!-- Explore -->
-    <h1>EXPLORE OUR GEARS</h1>
-    <div class="product">
-        <div class="explore">
-            <div class="slider">
-                <button class="slide-button material-symbols-outlined" id="prev-slide">chevron_left</button>
-                <div class="image">
-                    <img src="img/storage.png" class="item" id="">
-                    <img src="img/gpu.png" class="item" id="">
-                    <img src="img/monitor.png" class="item" id="">
-                    <img src="img/motherboard.png" class="item" id="">
-                    <img src="img/mouse.png" class="item" id="">
-                    <img src="img/headset.png" class="item" id="">
-                    <img src="img/keyboard.png" class="item" id="">
-                    <img src="img/cooling.png" class="item" id="">
-                    <img src="img/psu.png" class="item" id="">
-                    <img src="img/ram.png" class="item" id="">
-                    <img src="img/desktop.png" class="item" id="">
-                </div>
-                <button class="slide-button material-symbols-outlined" id="next-slide">chevron_right</button>
-            </div>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/owl.carousel.min.js" integrity="sha512-bPs7Ae6pVvhOSiIcyUClR7/q2OAsRiovw4vAkX+zJbw3ShAeeqezq50RIIcIURq7Oa20rW2n2q+fyXBNcU9lrw==" crossorigin="anonymous"
+      referrerpolicy="no-referrer"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/owl.carousel.js" integrity="sha512-gY25nC63ddE0LcLPhxUJGFxa2GoIyA5FLym4UJqHDEMHjp8RET6Zn/SHo1sltt3WuVtqfyxECP38/daUc/WVEA==" crossorigin="anonymous"
+      referrerpolicy="no-referrer"></script>
+    <script>
+      $('.owl-carousel').owlCarousel({
+        loop: true,
+        margin: 0,
+        nav: true,
+        dots: false,
+        navText: ["<i class = 'fa fa-chevron-left'></i>", "<i class = 'fa fa-chevron-right'></i>"],
+        responsive: {
+          0: {
+            items: 1
+          },
+          768: {
+            items: 1
+          },
+          1000: {
+            items: 1
+          }
+        }
+      })
+    </script>
+
+  <!--GALLERY-->
+  <section class="gallery">
+    <div class="container top">
+      <div class="heading">
+        <h1>PHOTOS</h1>
+        <h2>Our Gallery</h2>
+        <p>This section of Penta Haven showcases stunning images of the hotel's accommodations and amenities for potential guests.
+      </div>
+    </div>
+
+    <div class="content mtop">
+      <div class="owl-carousel owl-carousel1 owl-theme">
+        <div class="items">
+          <div class="img">
+            <img src="images/gallery-1.JPG" alt="">
+          </div>
+          <div class="overlay">
+
+          </div>
         </div>
-    </div>
+        <div class="items">
+          <div class="img">
+            <img src="images/gallery-2.JPG" alt="">
+          </div>
+          <div class="overlay">
 
-<!-- Cards -->
-    <div class="container">
+          </div>
+        </div>
+        <div class="items">
+          <div class="img">
+            <img src="images/gallery-3.JPG" alt="">
+          </div>
+          <div class="overlay">
+
+          </div>
+        </div>
+        <div class="items">
+          <div class="img">
+            <img src="images/gallery-4.JPG" alt="">
+          </div>
+          <div class="overlay">
+
+          </div>
+        </div>
+        <div class="items">
+          <div class="img">
+            <img src="images/gallery-5.JPG" alt="">
+          </div>
+          <div class="overlay">
+
+          </div>
+        </div>
+        <div class="items">
+          <div class="img">
+            <img src="images/gallery-6.jpg" alt="">
+          </div>
+          <div class="overlay">
+
+          </div>
+        </div>
+        <div class="items">
+          <div class="img">
+            <img src="images/gallery-1.JPG" alt="">
+          </div>
+          <div class="overlay">
+
+          </div>
+        </div>
+        <div class="items">
+          <div class="img">
+            <img src="images/gallery-2.JPG" alt="">
+          </div>
+          <div class="overlay">
+
+          </div>
+        </div>
+        <div class="items">
+          <div class="img">
+            <img src="images/gallery-3.JPG" alt="">
+          </div>
+          <div class="overlay">
+
+          </div>
+        </div>
+        <div class="items">
+          <div class="img">
+            <img src="images/gallery-4.JPG" alt="">
+          </div>
+          <div class="overlay">
+
+          </div>
+        </div>
+        <div class="items">
+          <div class="img">
+            <img src="images/gallery-5.JPG" alt="">
+          </div>
+          <div class="overlay">
+
+          </div>
+        </div>
+        <div class="items">
+          <div class="img">
+            <img src="images/gallery-6.jpg" alt="">
+          </div>
+          <div class="overlay">
+
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
+
+
+  <script>
+    $('.owl-carousel1').owlCarousel({
+      loop: true,
+      margin: 0,
+      nav: true,
+      dots: false,
+      autoplay: true,
+      autoplayTimeout: 1000,
+      autoplayHoverPause: true,
+      navText: ["<i class = 'fa fa-chevron-left'></i>", "<i class = 'fa fa-chevron-right'></i>"],
+      responsive: {
+        0: {
+          items: 1
+        },
+        768: {
+          items: 4,
+        },
+        1000: {
+          items: 6
+        }
+      }
+    })
+  </script>
+
+  <!--SERVICE-->
+    <section class="services top">
+      <div class="container">
+        <div class="heading">
+          <h1>SERVICES</h1>
+          <h2>Our Services</h2>
+          <p>This section highlights the range of amenities and offerings available to guests at Penta Haven.
+        </div>
+
+
+        <div class="content Flexspace">
+          <div class="left grid2">
+            <div class="box">
+              <div class="text">
+                <i class="fa-solid fa-champagne-glasses"></i>
+                <h3>Delious Food</h3>
+              </div>
+            </div>
+            <div class="box">
+              <div class="text">
+                <i class="fa-solid fa-person-biking"></i>
+                <h3>Fintness</h3>
+              </div>
+            </div>
+            <div class="box">
+              <div class="text">
+                <i class="fa-solid fa-utensils"></i>
+                <h3>Inhouse Restaurant</h3>
+              </div>
+            </div>
+            <div class="box">
+              <div class="text">
+                <i class="fa-solid fa-spa"></i>
+                <h3>Beauty Spa</h3>
+              </div>
+            </div>
+          </div>
+          <div class="right">
+            <img src="images/services.png" alt="">
+          </div>
+        </div>
+      </div>
+    </section>
+
+  <!--FOOTER-->
+    <footer>
+      <div class="container grid">
+        <div class="box">
+          <div class="logo-text">
+          <img src="Images/logo1.png" alt="">
+          <p>Experience the perfect getaway where luxury meets comfort. At Penta Haven, we provide top-tier amenities, exquisite dining options, and tailored services to make your stay truly remarkable. Whether visiting for business or leisure, enjoy a seamless blend of tranquility and sophistication.</p>
+          </div>  
+        </div>
 
         <div class="box">
-            <span></span>
-            <div class="content">
-                <h2>About Us</h2>
-                <p>Greetings from the crew behind the pixels! Ditching the ordinary, we set sail on a mission to handpick the extraordinary. 
-                    No fluff, just good stuff. Welcome to our online abode where shopping meets adventure!</p>
-                    <a href="about-us.html">Click for more</a>
-            </div>
+          <h2>Links</h2>
+          <ul>
+            <li><a href="../about/about.html">About Us</a></li>
+            <li><a href="../room/room.html">Rooms</a></li>
+            <li><a href="../contact/contact.html">Contact Us</a></li>
+          </ul>
         </div>
 
         <div class="box">
-            <span></span>
-            <div class="content">
-                <h2>Contact Us</h2>
-                <p>Got questions or just want to say hi? We're all ears! Shoot us a message, and we'll get back to you faster than your favorite meme loads. 
-                    Customer happiness is our priority.</p>
-                    <a href="contact.html">Click for more</a>
-            </div>
+          <h2>Contact Us</h2>
+          <i class="fa fa-location-dot"></i>
+          <label>University of the East - Caloocan </label> <br>
+          <i class="fa fa-phone"></i>
+          <label>09123456789</label> <br>
+          <i class="fa fa-envelope"></i>
+          <label>hotelbooking@gmail.com</label> <br>
         </div>
-
-        <div class="box">
-            <span></span>
-            <div class="content">
-                <h2>Brands</h2>
-                <p>We've teamed up with the best in the game. These brands aren't just labels; they're a statement. 
-                    Quality meets style, and innovation dances with tradition. Explore the lineup – it's not just products; it's a vibe.</p>
-                    <a href="brands.html">Click for more</a>
-            </div>
-        </div>
-
-    </div>
-
-<!-- Footer -->
-    <footer class="page-footer">
-        <p>Copyright &copy; <span id="date"></span>
-        <span class="footer-logo">Nov 2023 | Developed by: Cabungan, Cuajao, De Leon Jeremy, Eugenio, Pantua, Umlas</span>
-    </p>
+      </div>
     </footer>
-<!-- End -->
-    </body>
-    </html>
+
+    <div class="legal">
+      <p class="container">Copyright (c) 2024 All Rights Reserved.</p>
+    </div>
+
+  <script src="https://kit.fontawesome.com/032d11eac3.js" crossorigin="anonymous"></script>
+</body>
+
+</html>
